Bug 400732 - "Copy to clipboard" copies info in the wrong order
Summary: "Copy to clipboard" copies info in the wrong order
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: InfoSummary (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2018-11-06 09:39 UTC by Simone Gaiarin
Modified: 2018-11-11 16:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simone Gaiarin 2018-11-06 09:39:08 UTC
SUMMARY
The new "copy to clipboard" button in the "about system" page is very handy. One thing I noticed though, is that the information are not copied in the same order they are displayed. The KDE Framework and Qt version are inverted.

This is a trivial bug, I know, but it triggres my OCD. :-)

OBSERVED RESULT
Operating System: Manjaro Linux 
KDE Plasma Version: 5.14.2
Qt Version: 5.11.2
KDE Frameworks Version: 5.51.0
Kernel Version: 4.14.78-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.6 GiB of RAM


EXPECTED RESULT
Operating System: Manjaro Linux 
KDE Plasma Version: 5.14.2
KDE Frameworks Version: 5.51.0
Qt Version: 5.11.2
Kernel Version: 4.14.78-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.6 GiB of RAM
Comment 1 Gregor Mi 2018-11-11 14:09:23 UTC
Should be fixed with this: https://phabricator.kde.org/D16818
Comment 2 Gregor Mi 2018-11-11 14:35:21 UTC
Git commit 92f9f21e496f027cc29cda1b73bc749d26d0c46a by Gregor Mi.
Committed on 11/11/2018 at 14:35.
Pushed by gregormi into branch 'master'.

Copy to clipboard: match item order of copied text with GUI

Summary:

and: fix a typo in a comment nearby

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D16818

M  +5    -5    Modules/about-distro/src/Module.cpp

https://commits.kde.org/kinfocenter/92f9f21e496f027cc29cda1b73bc749d26d0c46a
Comment 3 Simone Gaiarin 2018-11-11 16:40:12 UTC
Great! Thanks for the work.