Copy to clipboard: match item order of copied text with GUI

Summary:
BUG: 400732

and: fix a typo in a comment nearby

Reviewers: #plasma, ngraham

Reviewed By: ngraham

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D16818